--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -8,13 +8,14 @@
 
     <TextView
         android:id="@+id/txtHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="16dp"
-        android:text="Welcome: "
-        android:textSize="24sp"
+        android:text="@string/header"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,7 +34,7 @@
             android:gravity="center">
 
             <Button
-                android:text="7"
+                android:text="@string/seven"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -41,7 +42,7 @@
                 android:id="@+id/btnSeven"/>
 
             <Button
-                android:text="8"
+                android:text="@string/eight"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -50,7 +51,7 @@
                 />
 
             <Button
-                android:text="9"
+                android:text="@string/nine"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -58,7 +59,7 @@
                 android:id="@+id/btnNine"/>
 
             <Button
-                android:text="/"
+                android:text="@string/divide"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -73,7 +74,7 @@
             android:gravity="center">
 
             <Button
-                android:text="4"
+                android:text="@string/four"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -81,7 +82,7 @@
                 android:id="@+id/btnFour"/>
 
             <Button
-                android:text="5"
+                android:text="@string/five"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -89,7 +90,7 @@
                 android:id="@+id/btnFive"/>
 
             <Button
-                android:text="6"
+                android:text="@string/six"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -97,7 +98,7 @@
                 android:id="@+id/btnSix"/>
 
             <Button
-                android:text="*"
+                android:text="@string/multiply"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -112,7 +113,7 @@
             android:gravity="center">
 
             <Button
-                android:text="1"
+                android:text="@string/one"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -120,7 +121,7 @@
                 android:id="@+id/btnOne"/>
 
             <Button
-                android:text="2"
+                android:text="@string/two"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -128,7 +129,7 @@
                 android:id="@+id/btnTwo"/>
 
             <Button
-                android:text="3"
+                android:text="@string/three"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -136,7 +137,7 @@
                 android:id="@+id/btnThree"/>
 
             <Button
-                android:text="-"
+                android:text="@string/minus"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -151,7 +152,7 @@
             android:gravity="center">
 
             <Button
-                android:text="."
+                android:text="@string/decimal"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -159,7 +160,7 @@
                 android:id="@+id/btnDecimal"/>
 
             <Button
-                android:text="0"
+                android:text="@string/zero"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -167,7 +168,7 @@
                 android:id="@+id/btnZero"/>
 
             <Button
-                android:text="CLR"
+                android:text="@string/clear"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -175,7 +176,7 @@
                 android:id="@+id/btnClear"/>
 
             <Button
-                android:text="+"
+                android:text="@string/plus"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -189,7 +190,7 @@
             android:layout_weight="1">
 
             <Button
-                android:text="="
+                android:text="@string/equals"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
@@ -201,14 +202,21 @@
     <TextView
         android:id="@+id/txtValues"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
         android:background="#efefef"
         android:ems="10"
         android:gravity="right|center_vertical"
         android:maxLength="12"
-        android:textSize="48sp"
+        android:overScrollMode="ifContentScrolls"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtHeader"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:ignore="RtlHardcoded" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
