--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
     <EditText
         android:id="@+id/editTxtName"
         android:layout_width="213dp"
-        android:layout_height="36dp"
+        android:layout_height="43dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
 
@@ -49,9 +49,9 @@
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="304dp"
+        android:layout_marginTop="44dp"
         android:text="Login?"
         app:layout_constraintEnd_toEndOf="@+id/txtHeader"
         app:layout_constraintStart_toStartOf="@+id/txtHeader"
-        app:layout_constraintTop_toBottomOf="@+id/txtHeader" />
+        app:layout_constraintTop_toBottomOf="@+id/editTxtName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
