--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="Calculator"
+        android:text="@string/calculator"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -22,10 +22,10 @@
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
         android:layout_marginTop="128dp"
-        android:text="Name: "
+        android:text="@string/name"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtHeader" />
@@ -34,23 +34,23 @@
         android:id="@+id/editTxtName"
         android:layout_width="213dp"
         android:layout_height="43dp"
+
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-
+        android:autofillHints="Name"
         android:ems="10"
         android:inputType="textPersonName"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/txtName"
         app:layout_constraintStart_toEndOf="@+id/txtName"
-        app:layout_constraintTop_toTopOf="@+id/txtName"
-        app:layout_constraintVertical_bias="1.0" />
+        tools:ignore="LabelFor" />
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
-        android:text="Login?"
+        android:text="@string/login"
         app:layout_constraintEnd_toEndOf="@+id/txtHeader"
         app:layout_constraintStart_toStartOf="@+id/txtHeader"
         app:layout_constraintTop_toBottomOf="@+id/editTxtName" />
