--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,10 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#E34A82</color>
 
     #user defined colors
     <color name="gray">#6B6B6D</color>
     <color name="whiteback">#D6D6D6</color>
-    <color name="buop">#F79261</color>
-    <color name="white">#FFFFFF</color>
+    <color name="operators">#00BDAA</color>
 </resources>
